# OpsPilot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
data/: opspilot.db
data/samples/: deployments.json  escalations.json  incidents.json  logs.jsonl  rules.json
docs/: ai-triage.md  api.md  architecture.md  data-model.md  deployment.md  escalation-workflow.md  operations-runbook.md
scripts/: seed_demo_data.py  self_check.py
src/opspilot/: app.py  cli.py  config.py  database.py
src/opspilot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/opspilot/api/: routes_analytics.py  routes_deployments.py  routes_escalations.py  routes_incidents.py  routes_logs.py  routes_workflows.py
src/opspilot/domain/: ai_triage.py  deployments.py  escalations.py  incidents.py  log_events.py  risk.py  workflows.py
src/opspilot/jobs/: queue.py  retry_policy.py  scheduler.py
src/opspilot/security/: auth.py  permissions.py  tokens.py
src/opspilot/services/: ai_service.py  analytics_service.py  deployment_service.py  escalation_service.py  incident_service.py  log_ingestion_service.py  notification_service.py  workflow_service.py
src/opspilot/storage/: migrations.py  repositories.py  seed.py
src/opspilot/web/static/: app.css  app.js
src/opspilot/web/templates/: index.html
tests/: test_api_routes.py  test_config.py  test_deployment_workflow.py  test_escalation_workflow.py  test_incident_triage.py  test_jobs_and_retries.py  test_log_ingestion.py  test_repositories.py  test_risk_scoring.py
