[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opspilot"
version = "0.1.0"
description = "AI-assisted operations control center MVP"
authors = [ { name="OpsPilot" } ]
requires-python = ">=3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
