[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opspilot"
version = "0.1.0"
description = "AI-assisted operations control center MVP"
authors = [ { name="OpsPilot" } ]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.8.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.22.0"
]

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
